
Slick 7.x-2.0-dev, 2014-2-1
---------------------------
Added hook_requirements() to slick.install.
Added thumbnail caption to slick_fields and slick_views like yahoo/youtube
  thumbnail captioning.


Slick 7.x-2.0-dev, 2014-1-30
----------------------------
Please read below before upgrading to Slick 1.4:
Breaking changes: https://github.com/kenwheeler/slick/releases/tag/1.4.0
  - slide - The default value of the slide option has been changed to blank.
    This means that slick will use any direct children as slides, without having
    to specify which tag or selector to target.
    Consequencies:
    * Added direct child container within .slick to hold the slides, i.e.:
      .slick__slider. Previously slides are direct children of .slick container.
    * Slick consequently must be initilialized at .slick__slider, otherwise we
      always have one slide.
    * "slick__arrow" can not be placed within .slick container directly even
      with the previous workaround by adding a specific class, and different
      selector. To overcome this, added additional container .slick__slider
      within .slick, so that .slick__arrow is not fetched as part of slides.
    * focusOnSelect , e.g. with thumbnail navigation, will not work anymore, so
      .slick__slide class added automatically only when needed now.
    * All in all, this is mostly breaking asNavFor, so be sure to update the
      asNavFor selectors accordingly at Field formatter and Views pages, e.g.:
      Before: #slick-nodes targetting .slick container.
      After: #slick-nodes-slider (note "-slider") targetting .slick__slider.

      Or adding " .slick__slider" to your current selector should resolve, e.g.:
      Before: #slick-nodes
      After: #slick-nodes .slick__slider
      Apply it to both asNavFor Main and asNavFor Thumbnail.

      Or if you are using sub-modules, and unsure, simply check the new option:
      "asNavFor auto selector" at:
      - admin/structure/types/manage/CONTENT_TYPE/display