@@ -151,8 +151,8 @@
         lazyLoad: merged.lazyLoad,
         dotsClass: merged.dotsClass,
         rtl: merged.rtl,
-        prevArrow: $('.slick__arrow .slick-prev', t) || merged.prevArrow,
-        nextArrow: $('.slick__arrow .slick-next', t) || merged.nextArrow,
+        prevArrow: $('.slick__arrow .slick-prev', t),
+        nextArrow: $('.slick__arrow .slick-next', t),
         appendArrows: merged.appendArrows,
         customPaging: function(slick, i) {
           return slick.$slides.eq(i).find('.slide__thumbnail--placeholder').html() || '<button type="button" data-role="none">' + (i + 1) + '</button>';
